--- a/backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -179,6 +179,18 @@ databaseChangeLog:
               - column:
                   name: text
                   value: "The sun is a planet. True or False?"
+        - insert:
+            tableName: questions
+            columns:
+              - column:
+                  name: text
+                  value: "Who is the author of Ramayana?"
+        - insert:
+            tableName: questions
+            columns:
+              - column:
+                  name: text
+                  value: "What is the total number of factors for 24?"
 
         - insert:
             tableName: options
@@ -256,23 +268,98 @@ databaseChangeLog:
                   name: question_id
                   valueNumeric: 2
         - insert:
-            tableName: quizzes
+            tableName: options
             columns:
               - column:
-                  name: id
-                  valueNumeric: 1
+                  name: text
+                  value: "Veda Vyasa"
               - column:
-                  name: user_id
-                  valueNumeric: 1
-              - column:
-                  name: is_completed
+                  name: is_correct
                   valueBoolean: false
-        - insert:
-            tableName: quiz_questions
-            columns:
-              - column:
-                  name: quiz_id
-                  valueNumeric: 1
               - column:
                   name: question_id
-                  valueNumeric: 1
+                  valueNumeric: 3
+        - insert:
+            tableName: options
+            columns:
+              - column:
+                  name: text
+                  value: "Adi Shankara"
+              - column:
+                  name: is_correct
+                  valueBoolean: false
+              - column:
+                  name: question_id
+                  valueNumeric: 3
+        - insert:
+            tableName: options
+            columns:
+              - column:
+                  name: text
+                  value: "Valmiki"
+              - column:
+                  name: is_correct
+                  valueBoolean: true
+              - column:
+                  name: question_id
+                  valueNumeric: 3
+        - insert:
+            tableName: options
+            columns:
+              - column:
+                  name: text
+                  value: "Kalidasa"
+              - column:
+                  name: is_correct
+                  valueBoolean: false
+              - column:
+                  name: question_id
+                  valueNumeric: 3
+        - insert:
+            tableName: options
+            columns:
+              - column:
+                  name: text
+                  value: "4"
+              - column:
+                  name: is_correct
+                  valueBoolean: false
+              - column:
+                  name: question_id
+                  valueNumeric: 4
+        - insert:
+            tableName: options
+            columns:
+              - column:
+                  name: text
+                  value: "8"
+              - column:
+                  name: is_correct
+                  valueBoolean: true
+              - column:
+                  name: question_id
+                  valueNumeric: 4
+        - insert:
+            tableName: options
+            columns:
+              - column:
+                  name: text
+                  value: "6"
+              - column:
+                  name: is_correct
+                  valueBoolean: false
+              - column:
+                  name: question_id
+                  valueNumeric: 4
+        - insert:
+            tableName: options
+            columns:
+              - column:
+                  name: text
+                  value: "10"
+              - column:
+                  name: is_correct
+                  valueBoolean: false
+              - column:
+                  name: question_id
+                  valueNumeric: 4
