--- a/flutter/.gitignore
+++ b/flutter/.gitignore
@@ -41,3 +41,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# flutter generated files
+/windows
+/linux
+/macos
